# copper-mining-monitoring-bi

./: .gitattributes  .gitignore  AGENTS.md  BI_SEMANTIC_MODEL.md  Copper_mining_risk_model.xlsm  DASHBOARD_BUILD_GUIDE.md  Modelo Estratégico de Creación de Valor y Evaluación de Expansión para Activo de Cobre Peruano bajo Escenarios Cíclicos de Mercado.xlsm  PORTAFOLIO_BI_BLUEPRINT.md  PORTFOLIO_OVERVIEW.md  POWERBI_MEASURES.md  README.md  README_legacy.md  RELEASE_V1.md  diseno_target_datos_y_validacion.md  marco_metodologico_modelo_riesgo.md  pyproject.toml  pytest.ini
config/: project.yaml
data/: AGENTS.md
docs/: AGENTS.md  ANNUAL_APPENDIX_WORK_ADAPTATION.md  BI_USAGE.md  DASHBOARD_FINAL.md  GETTING_STARTED.md  GITHUB_CASE_STUDY.md  GITHUB_PORTFOLIO_COPY.md  GITHUB_SETUP_CHECKLIST.md  LINKEDIN_PORTFOLIO_COPY.md  MODEL_NOTES.md  MONTHLY_MONITORING_LAYER.md  MONTHLY_REFRESH_RUNBOOK.md  PORTFOLIO_POSITIONING.md  PRIVATE_DEPLOYMENT_PATTERN.md  PROJECT_STRUCTURE.md  README_PORTFOLIO.md  VALUATION_AND_RISK_APPENDIX.md  WORK_ADAPTATION.md
powerbi/: AGENTS.md  DASHBOARD_BLUEPRINT.md  DAX_MEASURES.md  PAGE_BUILD_GUIDE.md  RELATIONSHIP_BLUEPRINT.md  REPORT_BUILD_CHECKLIST.md  SLICER_AND_FILTER_GUIDE.md  START_HERE.md  TEMPLATE_LAYER.md  dashboard_visual_map.csv
scripts/: build_advanced_appendix_dataset.py  build_annual_appendix_work_package.py  build_bi_dataset.py  build_monthly_monitoring_dataset.py  build_portfolio_dashboard.py  build_powerbi_native_scaffold.py  build_powerbi_template_layer.py  build_refresh_package.py  run_local_profile.py
src/: AGENTS.md
(+195 files in other folders)
